fixed alignment for cardhero

--- a/src/App.css
+++ b/src/App.css
@@ -338,15 +338,16 @@
 /*styling of grid*/
 
 .cardhero{
+  align-items: center;
+  border: solid red 2px;
   background-color: #eae9e4;
-  margin-bottom: 0;
-  height: 19r8em;
+  height: max-content;
   
 }
 .cardhero-header {
+  border: solid red 2px;
   margin-bottom: 0;
-  font-family: "Cinzel",
-    serif;
+  font-family: "Cinzel", serif;
   text-align: center;
   padding-top: 5rem;
   font-size: 3rem;
@@ -355,12 +356,15 @@
 }
 
 .herohr {
+  border: solid red 2px;
   width: 20%;
   margin: 1rem auto;
   color: black;
 }
 
 .card-grid {
+  border: solid red 2px;
+  width: 70%;
   display: inline-grid;
   grid-template-columns: auto;
  
@@ -376,6 +380,11 @@
   .cardhero{
     height: 199rem;
   }
+  .card-grid {
+    margin-left: 10%;
+    width: 80%;
+   
+  }
 }
 
 @media screen and (min-width:425px) {
@@ -388,13 +397,20 @@
   .cardhero {
     height: 197rem;
   }
+  .card-grid {
+    margin-left: 5%;
+    width: 90%;
+   
+  }
 }
 
 @media screen and (min-width:768px) {
 .card-grid {
   display: inline-grid;
+  width: 90%;
   grid-template-columns: auto auto;
-  margin-left: 1.5rem;
+  margin-left: 5%;
+
   
    
 }
@@ -424,7 +440,9 @@
   .card-grid {
     display: inline-grid;
     grid-template-columns: auto auto auto;
-    margin-left: 4rem;
+    width: 70%;
+    margin-left: 15%;
+    /* margin-left: 4rem; */
   }
 
   
